--- a/styles/popup.css
+++ b/styles/popup.css
@@ -29,7 +29,7 @@ a {
 
 h3 {
 	text-transform: uppercase;
-	font-size: .75em;
+	font-size: .9em;
 	transition: opacity, .5s ease-in-out
 }
 
